src/test/ui/consts/const-eval/const_raw_ptr_ops.stderr
error: any use of this value will cause an error
  --> $DIR/const_raw_ptr_ops.rs:6:26
   |
LL | const X: bool = unsafe { &1 as *const i32 == &2 as *const i32 };
   | -------------------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---
   |                          |
   |                          "pointer arithmetic or comparison" needs an rfc before being allowed inside constants
   |
   = note: `#[deny(const_err)]` on by default

error: any use of this value will cause an error
  --> $DIR/const_raw_ptr_ops.rs:8:27
   |
LL | const X2: bool = unsafe { 42 as *const i32 == 43 as *const i32 };
   | --------------------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---
   |                           |
   |                           "pointer arithmetic or comparison" needs an rfc before being allowed inside constants

error: any use of this value will cause an error
  --> $DIR/const_raw_ptr_ops.rs:12:28
   |
LL | const Y2: usize = unsafe { &1 as *const i32 as usize + 1 };
   | ---------------------------^^^^^^^^^^^^^^^^^^^^^^^^^-------
   |                            |
   |                            "pointer-to-integer cast" needs an rfc before being allowed inside constants

error: any use of this value will cause an error
  --> $DIR/const_raw_ptr_ops.rs:16:26
   |
LL | const Z2: i32 = unsafe { *(42 as *const i32) };
   | -------------------------^^^^^^^^^^^^^^^^^^^---
   |                          |
   |                          unable to turn bytes into a pointer

error: any use of this value will cause an error
  --> $DIR/const_raw_ptr_ops.rs:17:26
   |
LL | const Z3: i32 = unsafe { *(44 as *const i32) };
   | -------------------------^^^^^^^^^^^^^^^^^^^---
   |                          |
   |                          unable to turn bytes into a pointer

error: aborting due to 5 previous errors

